display fix and logo link added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <div class="button">
             <h2>крутануть <span id="clicksLeft">3</span> раз(а)</h2>
         </div>
-        <img class="img_logo" src="img/logo.png" alt="dms_logo">
+        <a href="https://t.me/dmsband" target="_blank">
+             <img class="img_logo" src="img/logo.png" alt="dms_logo">
+        </a>
         <p class="info">*Данный сайт создан исключительно в развлекательных целях и не несет никакого коммерческого умысла</p>
 
         <!-- Финальный экран -->
